force-app/main/default/objects/Anonymization_Config__mdt/Anonymization_Config__mdt.object-meta.xml
<CustomObject>
    <label>Anonymization Config</label>
    <pluralLabel>Anonymization Configs</pluralLabel>
</CustomObject>