force-app/main/default/objects/Anonymization_Config__mdt/fields/Additional_Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>Additional_Query_Fields__c</fullName>
    <label>Additional Query Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>