force-app/main/default/objects/Anonymization_Config__mdt/fields/SSN_Length__c.field-meta.xml
<CustomField>
    <fullName>SSN_Length__c</fullName>
    <label>SSN Length (Country Specific)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>